fix testmode, fix profile picture jumping on change

--- a/public/static/Style/app.css
+++ b/public/static/Style/app.css
@@ -656,13 +656,14 @@ input[type=text]:focus {
 
 .profileFrame {
     border-radius: 100%;
-    padding: 10px;
     background-color: var(--color-main);
     justify-content: center;
     margin: 10px;
     cursor: pointer;
     outline: 1px solid var(--color-none);
     transition: var(--transition-default);
+    width: 40px;
+    height: 40px;
 }
 
 .profileFrame:hover {
